>>style.css: fixed mobile responsive. Need to fix player Message so it doesn't get hidden on mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -61,7 +61,8 @@ h1 {
 #gameOutline {
 	background-color: #f5f5f5;
 	/*background-color: #A5D6A7;*/
-	width: 30vw;
+	width: 75vw;
+	max-width: 384px;
 	border: 1px solid #9e9e9e;
 	box-shadow: 10px 10px 10px 0px rgba(0,0,0,0.5);
 	border-radius: 5px;
@@ -74,7 +75,8 @@ h1 {
 
 .row {
 	width: 100%;
-	height: 10vw;
+	height: 25vw;
+	max-height: 128px;
 	display: inline-flex;
 	justify-content: space-around;
 	align-items: center;
@@ -83,8 +85,12 @@ h1 {
 
 div .col {
 	background-color: #eeeeee;
-	width: 8vw;
-	height: 8vw;
+	/*width: 8vw;
+	height: 8vw;*/
+	width: 30%;
+	max-width: 104.39px;
+	height: 90%;
+	max-height: 104.39px;
 	border: 1px solid #9e9e9e;
 	border-radius: 5px;
 	color: #ffffff;
